--- a/Demo/Knockout.Extensions.Demo.Web/Knockout.Extensions.Demo.Web.csproj
+++ b/Demo/Knockout.Extensions.Demo.Web/Knockout.Extensions.Demo.Web.csproj
@@ -65,10 +65,17 @@
   <ItemGroup>
     <Compile Include="Controllers\BindingsDemoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DataTableCriteriaExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="IEnumerableExtensions.cs" />
+    <Compile Include="Models\DataGridResult.cs" />
+    <Compile Include="Models\DataTableColumnCriteria.cs" />
+    <Compile Include="Models\DataTableCriteria.cs" />
+    <Compile Include="Models\SortDirection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuerySortOrder.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\DataTables-1.8.2\extras\AutoFill\media\css\AutoFill.css" />
@@ -151,6 +158,7 @@
     <Content Include="Content\themes\base\jquery.ui.tabs.css" />
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\cog.javascript.js" />
     <Content Include="Scripts\DataTables-1.8.2\extras\AutoFill\media\js\AutoFill.js" />
     <Content Include="Scripts\DataTables-1.8.2\extras\AutoFill\media\js\AutoFill.min.js" />
     <Content Include="Scripts\DataTables-1.8.2\extras\ColReorder\ColReorder\media\js\ColReorder.js" />
@@ -224,7 +232,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
