--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,53 @@
+# Git Ignore Help: http://help.github.com/git-ignore/
+
+
+# Compiled source #
+###################
+*.com
+*.class
+#*.dll
+*.exe
+*.o
+*.so
+#*.pdb
+*.dbmdl
+
+# User Specific Source #
+########################
 *.suo
-*.csproj.user
-bin
-obj
-*.pdb
-desktop.ini
+*.user
+*.docstates
+*.dbml
+*.gpState
+*.vs10x
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store?
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# Paths #
+#########
+obj/
+bin/
+sql/
