--- a/Demo/Knockout.Extensions.Demo.Web/Knockout.Extensions.Demo.Web.csproj
+++ b/Demo/Knockout.Extensions.Demo.Web/Knockout.Extensions.Demo.Web.csproj
@@ -63,7 +63,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\BindingsDemoController.cs" />
+    <Compile Include="Controllers\DemoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DataTableCriteriaExtensions.cs" />
     <Compile Include="Global.asax.cs">
@@ -73,11 +73,13 @@
     <Compile Include="Models\DataGridResult.cs" />
     <Compile Include="Models\DataTableColumnCriteria.cs" />
     <Compile Include="Models\DataTableCriteria.cs" />
+    <Compile Include="Models\DataTableRecord.cs" />
     <Compile Include="Models\SortDirection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuerySortOrder.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\demo.css" />
     <Content Include="Content\DataTables-1.8.2\extras\AutoFill\media\css\AutoFill.css" />
     <Content Include="Content\DataTables-1.8.2\extras\AutoFill\media\images\filler.png" />
     <Content Include="Content\DataTables-1.8.2\extras\ColReorder\ColReorder\media\css\ColReorder.css" />
@@ -158,7 +160,7 @@
     <Content Include="Content\themes\base\jquery.ui.tabs.css" />
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Global.asax" />
-    <Content Include="Scripts\cog.javascript.js" />
+    <Content Include="Scripts\cog.js" />
     <Content Include="Scripts\DataTables-1.8.2\extras\AutoFill\media\js\AutoFill.js" />
     <Content Include="Scripts\DataTables-1.8.2\extras\AutoFill\media\js\AutoFill.min.js" />
     <Content Include="Scripts\DataTables-1.8.2\extras\ColReorder\ColReorder\media\js\ColReorder.js" />
@@ -201,7 +203,8 @@
     <Content Include="Scripts\knockout-1.3.0beta.js" />
     <Content Include="Scripts\knockout.mapping-latest.debug.js" />
     <Content Include="Scripts\knockout.mapping-latest.js" />
-    <Content Include="Scripts\cog.knockout.bindings.dataTables.js" />
+    <Content Include="Scripts\ko.bindings.dataTables.js" />
+    <Content Include="Scripts\ko.bindings.radiochecklist.js" />
     <Content Include="Scripts\modernizr-1.7.js" />
     <Content Include="Scripts\modernizr-1.7.min.js" />
     <Content Include="Web.config" />
@@ -236,7 +239,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\BindingsDemo\Index.cshtml" />
+    <Content Include="Views\Demo\DataTables.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\DataTables-1.8.2\extras\TableTools\media\images\psd\collection.psd" />
@@ -253,6 +256,7 @@
     <None Include="Scripts\DataTables-1.8.2\extras\Scroller\media\js\Scroller.min.js.gz" />
     <None Include="Scripts\DataTables-1.8.2\extras\TableTools\media\js\TableTools.min.js.gz" />
     <None Include="Scripts\DataTables-1.8.2\media\js\jquery.dataTables.min.js.gz" />
+    <Content Include="Views\Demo\CheckRadioList.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
