--- a/Demo/Knockout.Extensions.Demo.Web/Knockout.Extensions.Demo.Web.csproj
+++ b/Demo/Knockout.Extensions.Demo.Web/Knockout.Extensions.Demo.Web.csproj
@@ -161,6 +161,7 @@
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\cog.js" />
+    <Content Include="Scripts\cog.utils.js" />
     <Content Include="Scripts\DataTables-1.8.2\extras\AutoFill\media\js\AutoFill.js" />
     <Content Include="Scripts\DataTables-1.8.2\extras\AutoFill\media\js\AutoFill.min.js" />
     <Content Include="Scripts\DataTables-1.8.2\extras\ColReorder\ColReorder\media\js\ColReorder.js" />
@@ -201,10 +202,10 @@
     <Content Include="Scripts\json2.min.js" />
     <Content Include="Scripts\knockout-1.3.0beta.debug.js" />
     <Content Include="Scripts\knockout-1.3.0beta.js" />
+    <Content Include="Scripts\knockout.bindings.dataTables.js" />
+    <Content Include="Scripts\knockout.bindings.radiochecklist.js" />
     <Content Include="Scripts\knockout.mapping-latest.debug.js" />
     <Content Include="Scripts\knockout.mapping-latest.js" />
-    <Content Include="Scripts\ko.bindings.dataTables.js" />
-    <Content Include="Scripts\ko.bindings.radiochecklist.js" />
     <Content Include="Scripts\modernizr-1.7.js" />
     <Content Include="Scripts\modernizr-1.7.min.js" />
     <Content Include="Web.config" />
