--- a/Demo/Knockout.Extensions.Demo.Web/Knockout.Extensions.Demo.Web.csproj
+++ b/Demo/Knockout.Extensions.Demo.Web/Knockout.Extensions.Demo.Web.csproj
@@ -160,6 +160,7 @@
     <Content Include="Content\themes\base\jquery.ui.tabs.css" />
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\_references.js" />
     <Content Include="Scripts\cog.js" />
     <Content Include="Scripts\cog.utils.js" />
     <Content Include="Scripts\DataTables-1.8.2\extras\AutoFill\media\js\AutoFill.js" />
