--- a/Demo/Knockout.Extensions.Demo.Web/Knockout.Extensions.Demo.Web.csproj
+++ b/Demo/Knockout.Extensions.Demo.Web/Knockout.Extensions.Demo.Web.csproj
@@ -160,6 +160,8 @@
     <Content Include="Content\themes\base\jquery.ui.tabs.css" />
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\knockout-2.1.0.debug.js" />
+    <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Scripts\cog.js" />
     <Content Include="Scripts\cog.utils.js" />
@@ -201,8 +203,6 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\json2.js" />
     <Content Include="Scripts\json2.min.js" />
-    <Content Include="Scripts\knockout-1.3.0beta.debug.js" />
-    <Content Include="Scripts\knockout-1.3.0beta.js" />
     <Content Include="Scripts\knockout.bindings.dataTables.js" />
     <Content Include="Scripts\knockout.bindings.radiochecklist.js" />
     <Content Include="Scripts\knockout.mapping-latest.debug.js" />
